safe-discriminant/tests/fail/double_repr.stderr
error: conflicting representation hints
 --> tests/fail/double_repr.rs:5:8
  |
5 | #[repr(u16)]
  |        ^^^

error[E0566]: conflicting representation hints
 --> tests/fail/double_repr.rs:4:8
  |
4 | #[repr(u8)]
  |        ^^
5 | #[repr(u16)]
  |        ^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
  = note: `#[deny(conflicting_repr_hints)]` on by default
